fixed perfomance on safari

--- a/src/components/callendar/calendar.scss
+++ b/src/components/callendar/calendar.scss
@@ -14,6 +14,11 @@
     transparent 0,
     transparent 4px
   ) !important;
+  // for safari
+  &:not(:root:root) {
+    background-color: #F1F7FB !important;
+    background-image: none !important;
+  }
 }
 
 $item-color: rgba(0, 143, 251, 0.9);
@@ -49,6 +54,9 @@ $item-border_selected: $item-border-size solid rgba(0, 0, 0, 0.25);
       background-color: $item-color_selected;
       border: $item-border_selected;
       z-index: 82 !important;
+      .resizer {
+        cursor: ew-resize !important;
+      }
     }
     &.weekend {
       z-index: 82 !important;
@@ -72,9 +80,6 @@ $item-border_selected: $item-border-size solid rgba(0, 0, 0, 0.25);
     .icon {
       transform: scale(-1, 1);
       font-size: 16px;
-    }
-    .resizer {
-      cursor: ew-resize !important;
     }
   }
   .group-item {
